feat: enhance SQL dump generation and restoration process with improved error handling and logging